fixed body overflow class positioning bug

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body {
 }
 .body-hide-overflow {
   overflow: hidden;
-  position: fixed;
+  /* position: fixed; */
   touch-action: none;
   -webkit-overflow-scrolling: none;
   overscroll-behavior: none;
